# cokaclang

./: COKAC_LANGUAGE_REFERENCE.md  Cargo.toml  README.md  app.bundle.js  app.js  buildweb.sh  index.html  style.css
builder/: executor.py
clang-xwin-wrapper/: clang
example/: hello.cokac
pkg/: README.md  cokaclang.d.ts  cokaclang.js  cokaclang_bg.wasm  cokaclang_bg.wasm.d.ts  package.json
runtime/runtime_e2e/: 01_basic_run.cokac  02_args_echo.cokac  03_stdin_len.cokac  04_file_persist.cokac  05_module_realrun.cokac  06_http_local_realrun.cokac  mod.mod
runtime/runtime_known_issues/: 02_module_returned_closure_panic.cokac
runtime/runtime_manual_checks/: 01_cli_args_stdin.cokac
runtime/runtime_tests/: 01_core_syntax.cokac  02_data_structures.cokac  03_exception_handling.cokac  04_module_import.cokac  05_file_json_path.cokac  06_async_task.cokac  07_args_env.cokac  08_process_ops.cokac  09_async_combinators.cokac  10_error_info_shape.cokac  11_http_local_loopback.cokac  12_async_fs_path.cokac  13_stress_loop.cokac  14_oop_inheritance.cokac  15_json_hash_base64.cokac  16_time_random_path.cokac  17_async_timeout_cancel.cokac  18_security_policy_guard.cokac  19_module_cache.cokac  20_array_hof_edges.cokac  21_object_ops_full.cokac  22_file_dir_advanced.cokac  23_path_helpers_full.cokac  24_async_process_ops.cokac  (+67 more)
src/: ast.rs  environment.rs  error.rs  evaluator.rs  json.rs  lexer.rs  lib.rs  main.rs  output.rs  parser.rs  runtime.rs  token.rs  value.rs  wasm.rs
website/: app.js  cokaclang-mode.js  index.html  package-lock.json  package.json  style.css
(+1234 files in other folders)
