[package]
name = "cokaclang"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
