[package]
name = "cokaclang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
rand = "0.8"

# Native-only dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process", "time", "sync"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
libc = { version = "0.2", optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = ["native"]
native = ["tokio", "reqwest", "libc"]
wasm = ["wasm-bindgen", "js-sys", "getrandom"]

[profile.release]
opt-level = 3
lto = true
